# cstrike

./: .editorconfig  .env.local.example  .envrc.example  .eslintignore  .eslintrc.js  .ghci  .gitattributes  .gitignore  .prettierignore  Cargo.toml  Dockerfile  Makefile  brittany.yaml  build.rs  default-extensions.yaml  flake.nix  package.json  package.yaml  shell.nix  stack.nix  stack.yaml  tsconfig.json  webpack.config.js
butler/: index.ts
butler/lib/: app.ts  config.ts  domain.ts
butler/protos/: echo_grpc_pb.d.ts  echo_grpc_pb.js  echo_pb.d.ts  echo_pb.js  prelude_pb.d.ts  prelude_pb.js  servant_grpc_pb.d.ts  servant_grpc_pb.js  servant_pb.d.ts  servant_pb.js
maid/exe/: Main.hs
nix/: grpc-tools.nix  grpc.nix  nodejs.nix  sources.json  yarn.nix
protos/: echo.proto  prelude.proto  servant.proto
servant/: config.rs  lib.rs  main.rs  package.yaml  protos.rs  services.rs  use_cases.rs
servant/config/: address.rs  error.rs  path_to_czero_maps.rs  path_to_map_cycle_txt.rs  path_to_maps.rs  path_to_server_cfg.rs  path_to_start_map.rs
servant/domain_objects/: server_config.rs
servant/exe/: Main.hs
servant/services/: echo.rs  servant.rs
servant/use_cases/: collect_maps.rs  error.rs  regenerate_mapcycle_txt.rs  regenerate_server_cfg.rs  regenerate_start_map.rs  start_hlds.rs  stop_hlds.rs
src/: app.ts  docker.ts  env.ts  index.ts  settings.ts
src/domainObjects/: serverConfig.ts
src/handlers/: cstrikeSlashCommand.ts  echoSlashCommand.ts  index.ts  serverConfigModalSubmission.ts  serverStopButtonClick.ts
src/useCases/: listMaps.ts  startHLDS.ts  (+1 more)
(+40 files in other folders)
