[package]
name = "cstrike-servant"
version = "0.0.0"
authors = ["Jiyu Zhou <carassius1014@gmail.com>"]
edition = '2018'
repository = "https://github.com/carassius1014/cstrike/"

[lib]
name = "servant"
path = "./servant/lib.rs"

[[bin]]
name = "server"
path = "./servant/main.rs"

[build-dependencies]
tonic-build = "0.4.2"

[dependencies]
prost = "0.7.0"
tokio = { version = "1.6", features = ["macros", "rt-multi-thread"] }
tonic = "0.4.3"
